--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="menu">
       <div>
        <label class="input-file">
-        <input type="file" name="file" id="file-input">
+        <input type="file" name="file" id="file-input" accept="image/*">
         <span>Виберіть зображення</span>
       </label>
       </div><br><br>
