--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </select>
       </div><br><br><br><br>
       <button class="btn" type="button" id="recognize-btn">Розпізнати текст</button><br><br><br>
-      <button class="btn" onclick="myFunction()">Скопіювати текст</button><br><br><br>
+      <button class="btn" onclick="copyTextFunction()">Скопіювати текст</button><br><br><br>
       <button class="btn" onClick="window.location.reload();">Очистити дані</button><br><br>
     </div>
     <div class="result-container">
